revert back running with JDK 17